backend/deploy/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: quality-backend-service
  namespace: appstudio-qe
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/component: quality-backend
    app.kubernetes.io/name: quality-dashboard
